Fixed overflow issue on small screens

--- a/web/static/web/css/topbar.virtual.css
+++ b/web/static/web/css/topbar.virtual.css
@@ -61,7 +61,6 @@
   display: block;
   padding: 100px 0;
   width: 100%;
-  overflow: hidden;
 }
 
 .page-helping{
